--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.6.5",
     "clsx": "^2.1.0",
+    "firebase": "^10.7.1",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -16,6 +17,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.1",
     "sass": "^1.69.7",
     "web-vitals": "^2.1.4"
   },
