--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.1",
+    "rsuite": "^5.53.2",
     "sass": "^1.69.7",
+    "semantic-ui-react": "^2.1.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
